--- a/exports/htmlshell/customshell.html
+++ b/exports/htmlshell/customshell.html
@@ -13,12 +13,15 @@
         }
 
         body {
+            align-content: center;
+            background-image: url("bg.png");
+            background-repeat: repeat;
             font-family: Fibberish;
             color: black;
         }
 
         canvas {
-            border: 2px solid black;
+            border: 4px solid #fcfcfc;
             padding: 0;
             margin: auto;
             display: block;
@@ -43,6 +46,12 @@
         .instructions {
             padding-top: 100vh;
         }
+
+        .card {
+            min-width: 600px;
+            background-color: yellow;
+            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        }
     </style>
 
     <body style="background-color: #fcfcfc;">
@@ -56,8 +65,10 @@
         </script>
 
         <center id="instructions">
-            <h1>About</h1>
-            You are froggy! On a quest to defeat the soda lords (or some shit).
+            <div id="card">
+                <h1>About</h1>
+                You are froggy! On a quest to defeat the soda lords (or some shit).
+            </div>
             <h1>Controls</h1>
             A/D   - Left/Right <br/>
             Space - Charge Jump <br/>
