--- a/exports/htmlshell/customshell.html
+++ b/exports/htmlshell/customshell.html
@@ -32,7 +32,7 @@
           </div>
       </nav>
 
-      <img class="logo" src="images/sodazonelogo.png"/>
+      <img class="logo" src="images/ufglogo.png"/>
 
       <div class="game-container">
         <img class="gameboy" src="images/gameboy.png"/>
@@ -47,21 +47,45 @@
 
       <center>
           <div class="container content">
-              <h1>About</h1>
-              You are froggy! On a quest to defeat the soda lords (or some shit).
+            <h1>Instructions</h1>
+            <div id="carouselExampleControls" class="carousel slide" data-interval="false">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="d-block w-100" src="images/Front Cover (GBC).png" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="images/Page 2.png" alt="Third slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="images/Page 3.png" alt="Third slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="images/Page 4 (alternative).png" alt="Third slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="images/Page 5.png" alt="Third slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="images/Page 6.png" alt="Third slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="images/Back Cover (alternative).png" alt="Third slide">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+              </div>
           </div>
 
           <div class="container content">
-              <h1>Controls</h1>
-              A/D   - Left / Right <br/>
-              Space - Charge Jump / Walljump <br/>
-              F     - Attack <br/>
-              E     - Interact <br/>
-          </div>
-
-          <div class="container content">
-              <h1>Credits</h1>
-              <h3>Wonderful asset artists</h3>
+              <h1>Asset Credits</h1>
+              <h3>Beautiful human beings</h3>
 
               <table>
                 <tr>
@@ -159,9 +183,17 @@
                   <td>edmoton</td>
                   <td>pnghut.com</td>
                 </tr>
+
+                <tr>
+                  <td>Game Boy Instruction Manual Figma Template</td>
+                  <td>soully</td>
+                  <td>itch.io</td>
+                </tr>
               </table>
           </div>
       </center>
+
+      <footer><i class="fa-solid fa-copyright"></i> emilyy.games 2022 <i class="fa-solid fa-heart"></i> You are loved. </footer>
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
       <script src="https://kit.fontawesome.com/ac2604cfe0.js" crossorigin="anonymous"></script>
